# resume

./: .env.example  .gitignore  README.md  pyproject.toml
resume/: main.py
